Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#1099 closed defect (fixed)

mxf inconsistent FooterPartition value: 10947448631 != 4294967298

Reported by: Alex Zhukov Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mxf regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

This looks like ticket https://ffmpeg.org/trac/ffmpeg/ticket/879
but this time i have example file and it does contain FooterPartition
I also suggested a patch on the mailing list but it brakes the mxf seeking test.
Anyway
the test file is here http://dl.dropbox.com/u/1109725/zero.mxf.gz
(warning: it ungzips to a 10GB file)

With ffmpeg-0.7.11
ffmpeg -i zero.mxf

ffmpeg version 0.7.11, Copyright (c) 2000-2011 the FFmpeg developers
  built on Mar 10 2012 23:14:01 with gcc 4.2.1 (Apple Inc. build 5666) (dot 3)
  configuration: --prefix=/opt/local --enable-gpl --enable-postproc --enable-swscale --enable-avfilter --enable-libmp3lame --enable-libvorbis --enable-libtheora --enable-libdirac --enable-libschroedinger --enable-libopenjpeg --enable-libxvid --enable-libx264 --enable-libvpx --enable-libspeex --mandir=/opt/local/share/man --enable-shared --enable-pthreads --cc=/opt/local/bin/gcc-apple-4.2 --arch=x86_64 --enable-yasm
  libavutil    50. 43. 0 / 50. 43. 0
  libavcodec   52.123. 0 / 52.123. 0
  libavformat  52.111. 0 / 52.111. 0
  libavdevice  52.  5. 0 / 52.  5. 0
  libavfilter   1. 80. 0 /  1. 80. 0
  libswscale    0. 14. 1 /  0. 14. 1
  libpostproc  51.  2. 0 / 51.  2. 0
[libopenjpeg @ 0x7fda1903fc00] Only first component will be used.
Input #0, mxf, from 'zero.mxf':
  Duration: 00:06:47.40, start: 0.000000, bitrate: 214968 kb/s
    Stream #0.0: Video: libopenjpeg, gray, 1920x1080, 23.98 fps, 23.98 tbr, 23.98 tbn, 23.98 tbc
At least one output file must be specified

git-master

ffmpeg version N-38896-gf645132 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 19 2012 15:53:54 with llvm_gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build 2336.1.00)
  configuration: --enable-gpl --enable-libx264 --enable-libopenjpeg
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 11.100 / 54. 11.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 65.101 /  2. 65.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
[mxf @ 0x7fe96183d800] inconsistent FooterPartition value: 10947448631 != 4294967298
[mxf @ 0x7fe96183d800] PreviousPartition points to this partition or forward
[mxf @ 0x7fe96183d800] error reading header metadata
zero.mxf: Invalid data found when processing input

git-master with the following patch

diff --git a/libavformat/mxfdec.c b/libavformat/mxfdec.c
index 07ac9fb..9da28dc 100644
--- a/libavformat/mxfdec.c
+++ b/libavformat/mxfdec.c
@@ -1877,6 +1877,7 @@ static int mxf_read_header(AVFormatContext *s)
             /* next partition pack - keep going, seek to previous partition or stop */
             if(mxf_parse_handle_partition_or_eof(mxf) <= 0)
                 break;
+            continue;
         }
 
         for (metadata = mxf_metadata_read_table; metadata->read; metadata++) {
ffmpeg version N-38896-gf645132 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 19 2012 15:53:54 with llvm_gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build 2336.1.00)
  configuration: --enable-gpl --enable-libx264 --enable-libopenjpeg
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 11.100 / 54. 11.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 65.101 /  2. 65.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, mxf, from 'zero.mxf':
  Metadata:
    timecode        : 01:00:45:00
  Duration: 00:06:47.40, start: 0.000000, bitrate: 214968 kb/s
    Stream #0:0: Video: j2k, yuv422p10le, 1920x1080, 23.98 tbr, 23.98 tbn, 23.98 tbc
At least one output file must be specified

Change History (5)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: regression added
Priority: normalimportant
Status: newopen

comment:2 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

A patch that is supposed to fix this problem was committed to FFmpeg.

comment:3 by Carl Eugen Hoyos, 14 years ago

Is the problem also reproducible with 0.10.2 and 0.9.1?

comment:4 by Alex Zhukov, 14 years ago

0.10.2 - reproduces
0.9.1 - reproduces
0.8.10 - does not reproduce

mertvobjol:media zhukov$ /usr/local/bin/ffmpeg -i StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf 
ffmpeg version 0.10.2 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 19 2012 21:29:37 with llvm_gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build 2336.1.00)
  configuration: --enable-gpl --enable-libx264 --enable-libopenjpeg --enable-shared --enable-static --disable-avfilter
  libavutil      51. 35.100 / 51. 35.100
  libavcodec     53. 61.100 / 53. 61.100
  libavformat    53. 32.100 / 53. 32.100
  libavdevice    53.  4.100 / 53.  4.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  6.100 /  0.  6.100
  libpostproc    52.  0.100 / 52.  0.100
[mxf @ 0x7f825403d800] inconsistent FooterPartition value: 10947448631 != 4294967298
[mxf @ 0x7f825403d800] PreviousPartition points to this partition or forward
[mxf @ 0x7f825403d800] error reading header metadata
StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf: Invalid data found when processing input
mertvobjol:media zhukov$ /usr/local/bin/ffmpeg -i StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf 
ffmpeg version 0.9.1, Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 21 2012 12:52:25 with llvm_gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build 2336.1.00)
  configuration: --enable-gpl --enable-libx264 --disable-avfilter --enable-libopenjpeg
  libavutil    51. 32. 0 / 51. 32. 0
  libavcodec   53. 42. 4 / 53. 42. 4
  libavformat  53. 24. 2 / 53. 24. 2
  libavdevice  53.  4. 0 / 53.  4. 0
  libswscale    2.  1. 0 /  2.  1. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[mxf @ 0x7fddf103d800] inconsistent FooterPartition value: 10947448631 != 4294967298
[mxf @ 0x7fddf103d800] PreviousPartition points to this partition or forward
[mxf @ 0x7fddf103d800] error reading header metadata
StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf: Operation not permitted
mertvobjol:media zhukov$ /usr/local/bin/ffmpeg -i StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf 
ffmpeg version 0.8.10, Copyright (c) 2000-2011 the FFmpeg developers
  built on Mar 21 2012 12:55:44 with llvm_gcc 4.2.1 (Based on Apple Inc. build 5658) (LLVM build 2336.1.00)
  configuration: --enable-gpl --enable-libx264 --disable-avfilter --enable-libopenjpeg
  libavutil    51.  9. 1 / 51.  9. 1
  libavcodec   53.  8. 0 / 53.  8. 0
  libavformat  53.  5. 0 / 53.  5. 0
  libavdevice  53.  1. 1 / 53.  1. 1
  libswscale    2.  0. 0 /  2.  0. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[libopenjpeg @ 0x7f9fd283fc00] Only first component will be used.
Input #0, mxf, from 'StemTape_2010_HD_16x9_240_2398_english_0630_JPEG2000_v0.mxf':
  Duration: 00:06:47.40, start: 0.000000, bitrate: 214968 kb/s
    Stream #0.0: Video: libopenjpeg, gray, 1920x1080, 23.98 fps, 23.98 tbr, 23.98 tbn, 23.98 tbc
At least one output file must be specified

in reply to:  4 comment:5 by Carl Eugen Hoyos, 14 years ago

Replying to zhukov:

0.10.2 - reproduces
0.9.1 - reproduces

Should be fixed in the next releases, if you want you can test with
git checkout release/0.9
git checkout release/0.10

Thank you for testing!

Note: See TracTickets for help on using tickets.